--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 spring.kafka.consumer.auto-offset-reset=earliest
-kafka.bootstrap-servers: localhost:29092
+spring.kafka.bootstrap-servers: localhost:29092
 kafka.product-topic: product-update-topic
 kafka.suggest-topic: suggest-update-topic
 
